[package]
name = "keyserver"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.1.0"
actix-files = "0.1.7"
actix-web = "1.0.8"
actix-service = "0.4.2"
actix-rt = "0.2.5"
base64 = "0.11.0"
bitcoin = "0.21.0"
bitcoin-zmq = "0.1.3"
bitcoincash-addr = "0.2.0"
bitcoin_hashes = "0.7.1"
bytes = "0.4.12"
clap = { version = "2.33.0", features = ["yaml"] }
config = "0.9.3"
dirs = "2.0.2"
env_logger = "0.7.1"
hex = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.8"
futures = "^0.1"
prost = "0.5.0"
reqwest = "0.9.22"
rocksdb = "0.12.4"
secp256k1 = "^0.15"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
subtle = "2.2.1"
tokio-timer = "0.2.11"
rust-base58 = "0.0.4"
url = "2.1.0"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
secp256k1 = { version = "^0.15", features = ["rand"] }
bigdecimal = { version = "0.1.0", features = ["serde"] }
