[package]
name = "keyserver"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"
description = "Cash:web Keyserver is a BCH-based key and metadata server"

[dependencies]
async-trait = "0.1.21"
base64 = "0.11.0"
bitcoin = "0.21.0"
bitcoin-zmq = "0.1.3"
bitcoincash-addr = "0.4.0"
bitcoin_hashes = "0.7.2"
bytes = "0.5.3"
cashweb-protobuf = { git = "https://github.com/cashweb/cashweb-rs" }
clap = { version = "2.33.0", features = ["yaml"] }
config = "0.10.1"
dirs = "2.0.2"
futures-core = "0.3.1"
hex = "0.4.0"
hyper = "0.13.0"
lazy_static = "1.4.0"
prost = { git = "https://github.com/LucioFranco/prost/", branch="lucio/update-bytes-0.5" }
rocksdb = "0.13.0"
secp256k1 = "0.17.1"
serde = { version = "1.0.103", features = ["derive"] }
subtle = "2.2.2"
tokio = { version = "0.2.4", features = ["macros", "rt-core"] }
tower-service = "0.3.0"
tower-layer = "0.3.0"
tracing = "0.1.10"
tracing-subscriber =  { version = "0.2.0-alpha.2", features = ["tracing-log"] }
tracing-attributes = "0.1.5"
tracing-futures = "0.2.0"
rust-base58 = "0.0.4"
url = "2.1.0"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
secp256k1 = { version = "0.17.1", features = ["rand"] }
bigdecimal = { version = "0.1.0", features = ["serde"] }
