[package]
name = "keyserver"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-web = "2.0.0"
actix-service = "1.0.1"
actix-rt = "1.0.0"
base64 = "0.11.0"
bitcoin = "0.21.0"
bitcoin-zmq = "0.2.0-alpha.1"
bitcoincash-addr = "0.5.0"
bitcoin_hashes = "0.7.3"
bytes = "0.5.3"
clap = { version = "2.33.0", features = ["yaml"] }
config = "0.10.1"
dirs = "2.0.2"
env_logger = "0.7.1"
hex = "0.4.0"
json-rpc = { package = "async-json-rpc", git = "https://github.com/hlb8122/async-json-rpc" }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.1"
prost = { git = "https://github.com/danburkert/prost" }
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
rocksdb = "0.13.0"
secp256k1 = "0.17.1"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
subtle = "2.2.2"
tokio = { version = "0.2.6", features = ["time"] }
rust-base58 = "0.0.4"
url = "2.1.0"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
secp256k1 = { version = "0.17.1", features = ["rand"] }
bigdecimal = { version = "0.1.0", features = ["serde"] }
